fix missing param in v1 docs
